--- a/index.html
+++ b/index.html
@@ -33,28 +33,32 @@
   <link rel="manifest" href="manifest.json">
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '132386967';
+    var serviceWorkerVersion = '2707108101';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=[api key]"></script>
+  
+
 </head>
 <body>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.9.1/firebase-messaging.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-messaging.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=[api key]"></script>
   <script>
     var firebaseConfig = {
-      apiKey: "AIzaSyDVh47R8EHofFZlewnZWpHK0kAx5KzSHr0",
-  authDomain: "luxepass-44e0e.firebaseapp.com",
-  projectId: "luxepass-44e0e",
-  storageBucket: "luxepass-44e0e.appspot.com",
-  messagingSenderId: "287494888668",
-  appId: "1:287494888668:web:c952061803f1ef169b2819"
+        apiKey: "AIzaSyDVh47R8EHofFZlewnZWpHK0kAx5KzSHr0",
+        authDomain: "luxepass-44e0e.firebaseapp.com",
+        projectId: "luxepass-44e0e",
+        storageBucket: "luxepass-44e0e.appspot.com",
+        messagingSenderId: "287494888668",
+        appId: "1:287494888668:web:c952061803f1ef169b2819"
     };
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
   </script>
+
+ 
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
@@ -69,6 +73,10 @@
       });
     });
   </script>
+
+
+  <script src="main.dart.js" type="application/javascript"></script>
+  
   
 </body>
 </html>
