booking status color update

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <link rel="manifest" href="manifest.json">
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '2852336681';
+    var serviceWorkerVersion = '189311512';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
@@ -51,7 +51,8 @@
         projectId: "luxepass-44e0e",
         storageBucket: "luxepass-44e0e.appspot.com",
         messagingSenderId: "287494888668",
-        appId: "1:287494888668:web:c952061803f1ef169b2819"
+        appId: "1:287494888668:web:c952061803f1ef169b2819",
+        measurementId: "G-JX4TY3J68H"
     };
 
     // Initialize Firebase
